--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 click==8.0.4
+scikit-learn
 colorama==0.4.4
 cycler==0.11.0
 Flask==2.0.3
@@ -17,7 +18,6 @@ Pillow==9.0.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
-scikit-learn==1.0.2
 scipy==1.8.0
 seaborn==0.11.2
 six==1.16.0
