--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ Pillow==9.0.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
-scipy==1.8.0
+scipy
 seaborn==0.11.2
 six==1.16.0
 threadpoolctl==3.1.0
