--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 click==8.0.4
 scikit-learn
+numpy
+scipy
+pandas
 colorama==0.4.4
 cycler==0.11.0
 Flask==2.0.3
@@ -10,15 +13,15 @@ joblib==1.1.0
 kiwisolver==1.3.2
 MarkupSafe==2.1.0
 matplotlib==3.5.1
-numpy==1.22.3
+
 opencv-python-headless==4.5.5.64
 packaging==21.3
-pandas==1.4.1
+
 Pillow==9.0.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
-scipy
+
 seaborn==0.11.2
 six==1.16.0
 threadpoolctl==3.1.0
