--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+numpy==1.22.3
+scikit-learn==1.0.2
+scipy==1.8.0
+pandas==1.4.1
+
 click==8.0.4
-scikit-learn
-numpy
-scipy
-pandas
 colorama==0.4.4
 cycler==0.11.0
 Flask==2.0.3
